# Coffee

./: .env  README.md  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml
coffe/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  models.py  services.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/templates/main/: base.html  index.html  monthly.html
main/templatetags/: my_tags.py
