[tool.poetry]
name = "coffe"
version = "0.1.0"
description = ""
authors = ["Adham Nasr <adham.nasr@bld.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.5"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
psycopg2 = "^2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
